# gpt-workflow

./: .gitignore  AGENTS.md  BRIEF.html  CHANGELOG.md  GOAL.md  PARITY.md  README.md  VERIFY.md  biome.jsonc  justfile  mise.toml  package.json  tsconfig.json
.changeset/: bright-journals.md  bright-tools-feel.md  calm-journals-move.md  calm-workflows.md  claude-parity-runtime.md  config.json  famous-icons-report.md  fresh-turtles-patch.md  fuzzy-python-sdk.md  inspect-durable-runs.md  long-turn-timeouts.md  quiet-types.md  steady-app-server-controls.md
.codex-plugin/: plugin.json
docs/: 00-audience.md  01-getting-started.md  02-script-format.md  03-api.md  04-runtime.md  05-patterns.md  06-errors-and-limits.md  07-plugin.md  08-claude-parity.md  BUILD.md  README.md
scripts/: mirror.ts  sync-python-version.ts  verify-live.ts  verify-offline.ts  verify-package.ts  verify-registry-artifacts.ts
sdks/python/: README.md  pyproject.toml
sdks/python/scripts/: verify-package.py
sdks/python/src/gpt_workflow/: __init__.py  _decode.py  _errors.py  _runner.py  _types.py  _version.py
sdks/python/tests/: conftest.py  test_errors.py  test_inspection.py  test_run.py
src/: agent-registry.ts  app-server.ts  brief.ts  cli.ts  index.ts  run-inspection.ts  runtime.ts  verification.ts  workflow-journal.ts  workflow-state.ts  workflow-storage.ts  worktree.ts
tests/: agent-registry.test.ts  app-server.test.ts  cli.test.ts  mirror.test.ts  phase5.test.ts  public-api.test.ts  registry-artifacts.test.ts  run-inspection.test.ts  runtime.test.ts  verification.test.ts  (+3 more)
(+87 files in other folders)
