[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "gpt-workflow"
version = "0.3.3"
description = "Typed Python wrapper for deterministic gpt-workflow runs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Cyrus Nuevo Dia" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[dependency-groups]
dev = [
  "pyright>=1.1.403",
  "pytest>=8.4",
  "ruff>=0.12",
  "twine>=6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_workflow"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnnecessaryIsInstance = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
